improve cover letter

--- a/cover.html
+++ b/cover.html
@@ -35,7 +35,7 @@
     <div class="letter">
         <h1>Experienced Sr. Software Engineer Seeking Innovative Challenges</h1>
         <p>Dear Hiring Manager,</p>
-        <p>As a software developer with a decade of professional IT experience, I offer an extensive background in developing scalable back-end systems, crafting enterprise microservices, creating REST APIs, and managing front-end projects. Proficient in Golang, Kafka, Docker, Kubernetes, Git, and well-versed in Data Structures, Algorithms and System Design, I am confident in my ability to contribute effectively to your technical team.</p>
+        <p>As a software developer with a decade of professional IT experience, I offer an extensive background in developing scalable back-end systems, crafting enterprise microservices from scratch, creating REST APIs and libraries. Proficient in Golang, Kafka, Docker, Kubernetes, CI/CD, and well-versed in Data Structures and System Design, I am confident in my ability to contribute effectively to your technical team.</p>
         <p>My experience spans leading roles at companies like Walmart and ThoughtWorks, where I was instrumental in designing and implementing various high-performing features in multi-cloud production environments. My expertise lies in ensuring high scalability, reliability, and availability in all projects I undertake.</p>
         <p>Passionate about problem-solving, I thrive in a collaborative environment that values creativity and intellectual empathy. I am excited to contribute to a team focused on leveraging technology for sustainable solutions.</p>
         <p>I look forward to discussing how my technical proficiency and innovative mindset would add value to your organisation.</p>
