--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                     daily deploying +100,000 lines of code, working on private, public and hybrid clouds.
                                 </li>
                                 <li>I work with Site Reliability Engineering Team, responsible for designing
-                                    and implementing solutions at Walmart scale for different teams.</li>
+                                    and implementing platform solutions at Walmart scale for different teams.</li>
                                 <li>Crafted crucial parts of auto-scaling and anomaly-detection services.</li>
                                 <li>Developed and maintained critical parts of telemetry services that ingest and store
                                     multi-million metrics per second in petabyte volumes.</li>
@@ -121,7 +121,6 @@
                                 <span>C#</span>
                                 <span>Kubernetes</span>
                                 <br/>
-                                <span>Site Reliability Engineering</span>
                                 <span>Prometheus</span>
                                 <span>K8s Operator</span>
                                 <span>Docker</span>
@@ -132,6 +131,7 @@
                                 <span>Linux</span>
                                 <span>SQL</span>
                                 <span>Git</span>
+                                <span>Site Reliability Engineering</span>
                             </dd>
                             <dt>Software Engg.</dt>
                             <dd>
