--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 <li>Walmart handles over 2.5 petabytes of data every hour, providing unparalleled scale and complexity in its backend operations that serves over 200 million customers each week,
                                     daily deploying +100,000 lines of code, working on private, public and hybrid clouds.
                                 </li>
-                                <li>I work with Site Reliability Engineering Team, responsible for designing
+                                <li>I'm responsible for designing
                                     and implementing platform solutions at Walmart scale for different teams.</li>
                                 <li>Crafted crucial parts of auto-scaling and anomaly-detection services.</li>
                                 <li>Developed and maintained critical parts of telemetry services that ingest and store
@@ -77,7 +77,7 @@
                             </div>
                             <ul>
                                 <li>ThoughtWorks is a leading global technology consultancy that integrates strategy, design and software engineering to enable enterprises and technology disruptors across the globe to thrive as modern digital businesses.</li>
-                                <li>Lead fast-paced complex projects from inception stage to successful delivery, including designing, development and hand-over.</li>
+                                <li>I led fast-paced complex projects from inception stage to successful delivery, including designing, development and hand-over.</li>
                                 <li>Designed and developed a scalable ETL data-pipeline using event-driven architecture that
                                     processed, aggregated more than 2 million invoices per hour.</li>
                                 <li>Designed and developed flawless user migration services that handled over 20k
@@ -131,7 +131,7 @@
                                 <span>Linux</span>
                                 <span>SQL</span>
                                 <span>Git</span>
-                                <span>Site Reliability Engineering</span>
+                                <span>SRE</span>
                             </dd>
                             <dt>Software Engg.</dt>
                             <dd>
@@ -313,6 +313,20 @@
                         </dl>
                     </div>
 
+                </div>
+
+                <div class="section section-languages">
+                    <h1 class="section-title">Addtional Info <i class="fas fa-passport"></i></h1>
+                    <div class="item">
+                        <h2 class="item-title">Nationality: <span> - Indian</span>
+                        </h2>
+                    </div>
+                    <div class="item">
+                        <h2 class="item-title">Work Authorisation: <span> - will require visa sponsorship for International roles.</span>
+                        </h2>
+                        <!-- <li>IELTS: 8 bands</li>
+                        <li>TOEFL: 109 - 2021</li> -->
+                    </div>
                 </div>
             </div>
     </main>
