update cover letter

--- a/cover.html
+++ b/cover.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Vikas Kaushik - Experienced Software Engineer</title>
-    <meta name="description" content="Vikas Kaushik, an experienced software engineer with over 10 years of experience, proficient in Golang, Kafka, Docker, Kubernetes, Git and more. Looking for innovative challenges.">
-    <meta name="keywords" content="Vikas Kaushik, Software Developer, Software Engineer, Golang, Kafka, Docker, Kubernetes, Git, Experienced Developer">
+    <meta name="description"
+        content="Vikas Kaushik, an experienced software engineer with over 10 years of experience, proficient in Golang, Kafka, Docker, Kubernetes, Git and more. Looking for innovative challenges.">
+    <meta name="keywords"
+        content="Vikas Kaushik, Software Developer, Software Engineer, Golang, Kafka, Docker, Kubernetes, Git, Experienced Developer">
     <meta name="author" content="Vikas Kaushik">
     <style>
         body {
@@ -16,31 +19,58 @@
             align-items: center;
             background-color: #f4f4f4;
         }
+
         .letter {
             background-color: #fff;
             padding: 20px;
             max-width: 800px;
             margin: auto;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+
         .letter h1 {
             margin-top: 0;
         }
+
         .letter p {
             line-height: 1.6;
         }
     </style>
 </head>
+
 <body>
     <div class="letter">
-        <h1>Experienced Sr. Software Engineer Seeking Innovative Challenges</h1>
-        <p>Dear Hiring Manager,</p>
-        <p>As a software developer with a decade of professional IT experience, I offer an extensive background in developing scalable back-end systems, crafting enterprise microservices from scratch, creating REST APIs and libraries. Proficient in Golang, Kafka, Docker, Kubernetes, CI/CD, and well-versed in Data Structures and System Design, I am confident in my ability to contribute effectively to your technical team.</p>
-        <p>My experience spans leading roles at companies like Walmart and ThoughtWorks, where I was instrumental in designing and implementing various high-performing features in multi-cloud production environments. My expertise lies in ensuring high scalability, reliability, and availability in all projects I undertake.</p>
-        <p>Passionate about problem-solving, I thrive in a collaborative environment that values creativity and intellectual empathy. I am excited to contribute to a team focused on leveraging technology for sustainable solutions.</p>
-        <p>I look forward to discussing how my technical proficiency and innovative mindset would add value to your organisation.</p>
-        <br/>
-        <p>Best regards,<br/>Vikas Kaushik</p>
+        <h3>Cover Letter</h3>
+
+        <p>Dear Recruiter,</p>
+
+        <p>I am writing to express my keen interest in the available job opportunity at your company. In
+            over 10 years of professional IT experience, I have successfully delivered enterprise-grade
+            applications, microservices and libraries, including tests, instrumentation and monitoring in
+            production. My expertise lies in ensuring scalability, reliability, and availability in all projects I
+            undertake.</p>
+
+        <p>I am hands-on in Golang, Kubernetes, Docker, CI/CD setup, deployments, Kafka,
+            Prometheus, Grafana, and well-versed with data structures and system design. At Walmart,
+            I am responsible for designing and implementing SRE solutions, including autoscaling and
+            anomaly detection systems, K8s operators, showback services, onboarding APIs, and
+            Prometheus exporters. During my tenure at ThoughtWorks, I developed cloud-based
+            enterprise web applications and data pipelines using a wide range of technologies,
+            including Golang, C#, React-JS, Kafka, Docker, Kubernetes, Git, OAuth, CI/CD, REST APIs,
+            and microservices.
+        </p>
+
+        <p>I thrive in an environment that values inclusivity, diversity, creativity, sustainability, and
+            collaboration. As an empathetic intellectual and first principle thinker, I am dedicated to
+            delivering high-quality work and making a valuable contribution to the team's goals and
+            milestones.</p>
+
+        <p>I would welcome the opportunity to discuss the role further and how I can contribute to
+            your organization's success</p>
+
+        <p>Sincerely,<br />
+            Vikas Kaushik</p>
     </div>
 </body>
+
 </html>
