--- a/index.html
+++ b/index.html
@@ -49,20 +49,19 @@
                                 <span class="job-title"><i class="fas fa-map-marker-alt"></i> Bengaluru, India</span>
                             </div>
                             <ul>
+                                <li>I'm responsible for designing
+                                    and implementing platform engineering solutions at Walmart scale for Observability and SRE.</li>
+                                <li>I've crafted crucial parts of auto-scaling and anomaly-detection services, running ML models for hundereds of clients.</li>
+                                <li>I developed and maintained critical parts of telemetry services that ingest and store
+                                    multi-million metrics per second in large volumes.</li>
+                                <li>Implemented showback modules to quantify the telemetry platform usage by different
+                                    teams in terms of dollar cost.</li>
+                                <li>Delivered production grade enterprise microservices, prometheus exporters and kuberentes operators</li>
+                                <li><b>Tech-stack:</b> golang, kubernetes, GCP, Kafka, operators, SRE, Devops, prometheus,
+                                    grafana, M3, Multi-cloud, DR.</li>
                                 <li>Walmart handles over 2.5 petabytes of data every hour, providing unparalleled scale and complexity in its backend operations that serves over 200 million customers each week,
                                     daily deploying +100,000 lines of code, working on private, public and hybrid clouds.
                                 </li>
-                                <li>I'm responsible for designing
-                                    and implementing platform solutions at Walmart scale for different teams.</li>
-                                <li>Crafted crucial parts of auto-scaling and anomaly-detection services.</li>
-                                <li>Developed and maintained critical parts of telemetry services that ingest and store
-                                    multi-million metrics per second in petabyte volumes.</li>
-                                <li>Implemented showback modules to quantify the telemetry platform usage by different
-                                    teams in terms of dollar cost.</li>
-                                <li>Delivered production grade enterprise microservices that are scalable, reliable and
-                                        maintainable. </li>
-                                <li><b>Tech-stack:</b> golang, kubernetes, GCP, Kafka, operators, SRE, Devops, prometheus,
-                                    grafana, M3, Multi-cloud, DR.</li>
                             </ul>
                         </div>
                     </div>
@@ -76,7 +75,6 @@
                                 <span class="job-title"><i class="fas fa-map-marker-alt"></i> Pune, India</span>
                             </div>
                             <ul>
-                                <li>ThoughtWorks is a leading global technology consultancy that integrates strategy, design and software engineering to enable enterprises and technology disruptors across the globe to thrive as modern digital businesses.</li>
                                 <li>I led fast-paced complex projects from inception stage to successful delivery, including designing, development and hand-over.</li>
                                 <li>Designed and developed a scalable ETL data-pipeline using event-driven architecture that
                                     processed, aggregated more than 2 million invoices per hour.</li>
@@ -92,6 +90,7 @@
                                 </li>
                                 <li><b>Tech-stack:</b> golang, kubernetes, Kafka, Kafka-Streams, Java-Spring-Webflux,
                                     React-Redux, Oauth, Ansible, Jenkins, CI/CD, Git. </li>
+                                    <li>ThoughtWorks is a leading global technology consultancy that integrates strategy, design and software engineering to enable enterprises and technology disruptors across the globe to thrive as modern digital businesses.</li>
 
                             </ul>
                         </div>
@@ -104,11 +103,10 @@
             <div class="right-column">
                 <div class="section section-about">
                     <h1 class="section-title">About <i class="fas fa-user"></i></h1>
-                    <p>I'm a Software Engineer with an inherent zeal for quality and got 10+ years of hands-on
-                        experience in
-                        designing and developing software systems. I like to be among empathetic intellectuals & first principle
-                        thinkers. I love to work in an environment that has high regard for inclusivity, diversity,
-                        creativity, sustainability and collaboration.</p>
+                    <p>With a decade of Professional work experience, I'm skilled in developing reliable & scalable distributed backend systems.
+                        I've inehrence zeal for quality and I thrive in an environment that has high regard for inclusivity, diversity,
+                        creativity, sustainability and collaboration. I love to be among empathetic intellectuals & first principle thinkers.
+                    </p>
                 </div>
 
                 <div class="section section-skills">
@@ -148,8 +146,6 @@
                                 <span>Clean Architecture</span>
                                 <span>Agile</span>
                                 <span>TDD</span>
-                                <span>OOP</span>
-                                <span>DDD</span>
                                 <span>Saga</span>
                                 <span>Rest APIs</span>
 
@@ -193,8 +189,7 @@
                                 <span class="job-title"><i class="fas fa-map-marker-alt"></i> Gurugram, India</span>
                             </div>
                             <ul>
-                                <li>Ciena (NYSE:CIEN) is a global leader in optical and routing systems, services, and automation software. </li>
-                                <li>Developed and enhanced an existing product - Blueplanet for clients: AT&T, Facebook
+                                <li>Developed and enhanced an SDN product - Blueplanet for clients: AT&T, Facebook
                                     (USA)</li>
                                 <li>Significant contribution towards feature implementation, Rest API Development,
                                     refactoring and
@@ -204,6 +199,7 @@
                                     true
                                     end-to-end service orchestration and SDN software suite for optical networks.</li>
                                 <li><b>Tech-stack:</b> C#, .Net core, Docker, Cassandra, Kafka, Git</li>
+                                <li>Ciena (NYSE:CIEN) is a global leader in optical and routing systems, services, and automation software. </li>
                             </ul>
                         </div>
                     </div>
@@ -217,7 +213,6 @@
                                 <span class="job-title"><i class="fas fa-map-marker-alt"></i> Bengaluru, India</span>
                             </div>
                             <ul>
-                                <li>Optym have applied optimization & AI algorithms to some of the largest transportation companies including top railroads and airlines.</li>
                                 <li>Improved the API SLAs 5 times by implementing streaming and bug fixes. </li>
                                 <li>Developed application Middle Layer including REST APIs, caching strategy and
                                     asynchronous processing. Implemented concepts like AOP, DI, Lazy evaluation.</li>
@@ -229,7 +224,7 @@
                                     planners, and central dispatchers to create better linehaul schedules and shipment
                                     routes.</li>
                                 <li><b>Tech-stack:</b> C#, .Net, MS SQL, SVN, Agile, Ninject, LINQ, Postsharp, NUnit.</li>
-
+                                <li>Optym have applied optimization & AI algorithms to some of the largest transportation companies including top railroads and airlines.</li>
                             </ul>
                         </div>
                     </div>
@@ -243,7 +238,6 @@
                                 <span class="job-title"><i class="fas fa-map-marker-alt"></i> Chandigarh, India</span>
                             </div>
                             <ul>
-                                <li>Infosys (NYSE: INFY) is a well-known MNC known for it's IT Solutions and Services, Consulting, Business Process Outsourcing, Products and Platforms, Engineering Services.</li>
                                 <li>Enhanced Report Generation module for BASEL-3 and bug fixes.</li>
                                 <li>Worked on Data Warehousing project in which report generation is done after a complex
                                     ETL process.</li>
@@ -253,6 +247,7 @@
                                     Project (SOP), Three Amex applications i.e. Project uplift, NIT 2.0, ACH Gateway,
                                     BOP</li>
                                 <li><b>Tech-stack:</b> Mainframe, COBOL, MS-SQL, Linux, Perl, HTML, CSS, Js</li>
+                                <li>Infosys (NYSE: INFY) is a well-known MNC known for it's IT Solutions and Services, Consulting, Business Process Outsourcing, Products and Platforms, Engineering Services.</li>
                             </ul>
                         </div>
                     </div>
