--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description" content="Vikas Kaushik, an experienced software engineer with over 10 years of experience, proficient in Golang, Kafka, Docker, Kubernetes, Git and more. Looking for innovative challenges.">
-    <meta name="keywords" content="Vikas Kaushik, Software Developer, Software Engineer, Golang, Kafka, Docker, Kubernetes, Git, Experienced Developer">
+    <meta name="description"
+        content="Vikas Kaushik, an experienced software engineer with over 10 years of experience, proficient in Golang, Kafka, Docker, Kubernetes, Git and more. Looking for innovative challenges.">
+    <meta name="keywords"
+        content="Vikas Kaushik, Software Developer, Software Engineer, Golang, Kafka, Docker, Kubernetes, Git, Experienced Developer">
     <meta name="author" content="Vikas Kaushik">
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -24,8 +26,8 @@
                     <h1 class="name">Vikas Kaushik</h1>
                     <h2 class="tagline">Senior Software Engineer | <i class="fas fa-briefcase"></i> 10+ Years</h2>
                     <span class="contact">
-                        <i class="fas fa-phone-square-alt"></i> +91-8699339558 | <a
-                            href="mailto:kaushik2272@gmail.com" class="no-external-icon">
+                        <i class="fas fa-phone-square-alt"></i> +91-8699339558 | <a href="mailto:kaushik2272@gmail.com"
+                            class="no-external-icon">
                             <i class="fas fa-envelope"></i> kaushik2272@gmail.com </a> | <a
                             href="https://www.linkedin.com/in/vikaushik/" class="no-external-icon">
                             <i class="fab fa-linkedin"></i> /in/vikaushik </a>
@@ -49,23 +51,21 @@
                                 <span class="job-title"><i class="fas fa-map-marker-alt"></i> Bengaluru, India</span>
                             </div>
                             <ul>
-                                <li>I'm responsible for designing
-                                    and implementing platform engineering solutions at Walmart scale for Observability and SRE.</li>
-                                <li>I've crafted crucial parts of auto-scaling and anomaly-detection services, running ML models for hundereds of clients.</li>
-                                <li>I developed and maintained critical parts of telemetry services that ingest and store
+                                <li><b>Tech-stack:</b> Golang, Kubernetes, Docker, Kafka, SRE, DevOps, Prometheus,
+                                    Grafana, M3, K8s operators, Multi-cloud, DR, GCP.</li>
+                                <li>Designed and implemented anomaly-detection services for AIDR (AI-based Incident
+                                    Detection and Recovery),
+                                    serving hundreds of clients for real-time anomaly detection.</li>
+                                <li>Developed a showback system to represent the telemetry platform usage by different
+                                    teams in terms of dollar cost. This reduced platform abuse by ~20%.</li>
+                                <li>Enhanced and maintained critical parts of telemetry services that ingest and store
                                     multi-million metrics per second in large volumes.</li>
-                                <li>Implemented showback modules to quantify the telemetry platform usage by different
-                                    teams in terms of dollar cost.</li>
-                                <li>Delivered production grade enterprise microservices, prometheus exporters and kuberentes operators</li>
-                                <li><b>Tech-stack:</b> golang, kubernetes, GCP, Kafka, operators, SRE, Devops, prometheus,
-                                    grafana, M3, Multi-cloud, DR.</li>
-                                <li>Walmart handles over 2.5 petabytes of data every hour, providing unparalleled scale and complexity in its backend operations that serves over 200 million customers each week,
-                                    daily deploying +100,000 lines of code, working on private, public and hybrid clouds.
-                                </li>
+                                <li>Wrote Prometheus Exporters, Kubernetes Operators, REST APIs, and Production grade
+                                    enterprise microservices.</li>
                             </ul>
                         </div>
                     </div>
-
+                    <br />
                     <div class="item group">
                         <h2 class="item-title">ThoughtWorks</h2>
                         <div class="item">
@@ -75,23 +75,22 @@
                                 <span class="job-title"><i class="fas fa-map-marker-alt"></i> Pune, India</span>
                             </div>
                             <ul>
-                                <li>I led fast-paced complex projects from inception stage to successful delivery, including designing, development and hand-over.</li>
-                                <li>Designed and developed a scalable ETL data-pipeline using event-driven architecture that
-                                    processed, aggregated more than 2 million invoices per hour.</li>
-                                <li>Designed and developed flawless user migration services that handled over 20k
-                                    distributed Tx (saga) per hour.</li>
-                                <li>Implemented responsive UI with Internationalisation support using React-redux,
-                                    Material UI,
-                                    Jest.</li>
-                                <li>Engaged with different clients i.e. Babyloan (UK), CXA (Singapore), Tesco (UK).
-                                </li>
-                                <li>Worked as a trainer to upskill new hire batches with agile practices,
-                                    ways-of-working and ThoughtWorks culture. Driven different workshops for colleagues.
-                                </li>
-                                <li><b>Tech-stack:</b> golang, kubernetes, Kafka, Kafka-Streams, Java-Spring-Webflux,
+                                <li><b>Tech-stack:</b> Golang, Kubernetes, Kafka, Kafka-Streams, Java-Spring-Webflux,
                                     React-Redux, Oauth, Ansible, Jenkins, CI/CD, Git. </li>
-                                    <li>ThoughtWorks is a leading global technology consultancy that integrates strategy, design and software engineering to enable enterprises and technology disruptors across the globe to thrive as modern digital businesses.</li>
-
+                                <li>Designed and developed a scalable ETL data pipeline using an event-driven
+                                    architecture that
+                                    processed and aggregated more than 2 million invoices per hour.</li>
+                                <li>Implemented flawless user migration services that handled over 20k
+                                    distributed Tx (saga) per hour.</li>
+                                <li>Engaged as the Tech-lead for the clients: Tesco (UK) and IDFC from ThoughtWorks and
+                                    led these fast-paced projects from inception stage to successful delivery.</li>
+                                <li>Implemented responsive UI with Internationalisation support using React-redux,
+                                    Material UI, and Jest.</li>
+                                <li>Delivered training sessions to upskill new hire batches for agile practices,
+                                    ways-of-working, and ThoughtWorks culture. Driven lunch & learn sessions and design
+                                    thinking
+                                    workshops for colleagues.
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -103,9 +102,12 @@
             <div class="right-column">
                 <div class="section section-about">
                     <h1 class="section-title">About <i class="fas fa-user"></i></h1>
-                    <p>With a decade of Professional work experience, I'm skilled in developing reliable & scalable distributed backend systems.
-                        I've inehrence zeal for quality and I thrive in an environment that has high regard for inclusivity, diversity,
-                        creativity, sustainability and collaboration. I love to be among empathetic intellectuals & first principle thinkers.
+                    <p>With a decade of Professional work experience, I'm skilled in developing reliable & scalable
+                        distributed backend systems.
+                        I've inherent zeal for quality. I thrive in an environment that has high regard for inclusivity,
+                        diversity,
+                        creativity, sustainability, and collaboration. I love to be among empathetic intellectuals &
+                        first-principle thinkers.
                     </p>
                 </div>
 
@@ -118,13 +120,13 @@
                                 <span>Golang</span>
                                 <span>C#</span>
                                 <span>Kubernetes</span>
-                                <br/>
+                                <br />
                                 <span>Prometheus</span>
                                 <span>K8s Operator</span>
                                 <span>Docker</span>
                                 <span>Kafka</span>
                                 <span>Grafana</span>
-                                <br/>
+                                <br />
                                 <span>OAuth</span>
                                 <span>Linux</span>
                                 <span>SQL</span>
@@ -141,7 +143,7 @@
                                 <span>Algorithms & Complexity</span>
                                 <span>Design Patterns</span>
                                 <span>CI/CD</span>
-                                <span>Devops</span>
+                                <span>DevOps</span>
                                 <span>Clean Code</span>
                                 <span>Clean Architecture</span>
                                 <span>Agile</span>
@@ -189,21 +191,19 @@
                                 <span class="job-title"><i class="fas fa-map-marker-alt"></i> Gurugram, India</span>
                             </div>
                             <ul>
-                                <li>Developed and enhanced an SDN product - Blueplanet for clients: AT&T, Facebook
+                                <li><b>Tech-stack:</b> C#, .Net core, Docker, Cassandra, Kafka, Git</li>
+                                <li>Did feature development for SDN product - Blueplanet for clients: AT&T, Facebook
                                     (USA)</li>
                                 <li>Significant contribution towards feature implementation, Rest API Development,
                                     refactoring and
                                     bug fixing in a domain heavy context.</li>
                                 <li>Project: Blue Planet is a container-based microservices software architecture that
-                                    enables
-                                    true
-                                    end-to-end service orchestration and SDN software suite for optical networks.</li>
-                                <li><b>Tech-stack:</b> C#, .Net core, Docker, Cassandra, Kafka, Git</li>
-                                <li>Ciena (NYSE:CIEN) is a global leader in optical and routing systems, services, and automation software. </li>
+                                    enables true end-to-end service orchestration and SDN software suite for optical
+                                    networks.</li>
                             </ul>
                         </div>
                     </div>
-
+                    <br />
                     <div class="item group">
                         <h2 class="item-title">Optym</h2>
                         <div class="item">
@@ -213,22 +213,23 @@
                                 <span class="job-title"><i class="fas fa-map-marker-alt"></i> Bengaluru, India</span>
                             </div>
                             <ul>
-                                <li>Improved the API SLAs 5 times by implementing streaming and bug fixes. </li>
-                                <li>Developed application Middle Layer including REST APIs, caching strategy and
-                                    asynchronous processing. Implemented concepts like AOP, DI, Lazy evaluation.</li>
-                                <li>Worked in a startup environment along with Operation Research Scholars.</li>
+                                <li><b>Tech-stack:</b> C#, .Net, MS-SQL, SVN, Agile, Ninject, LINQ, Postsharp, NUnit.
+                                </li>
+                                <li>Improved API SLAs 5 times by implementing streaming and caching.</li>
+                                <li>Implemented REST APIs, caching strategy, and
+                                    asynchronous processing of business logic, using AOP, DI, and Lazy evaluation.</li>
+                                <li>Took complete ownership of the application middle layer in a startup environment
+                                    with Operation Research Scholars.</li>
                                 <li>Project: HaulPLAN (Clients: FedEx, ABF, SAIA, YRCF - USA): HaulPLAN is
-                                    revolutionising how less than truckload shipping (LTL) carriers create
-                                    plans and optimise network operations. The system can be used by linehaul planners,
+                                    a service for less-than-truckload shipping (LTL) carriers to create
+                                    plans and optimize network operations. The system can be used by linehaul planners,
                                     network
                                     planners, and central dispatchers to create better linehaul schedules and shipment
                                     routes.</li>
-                                <li><b>Tech-stack:</b> C#, .Net, MS SQL, SVN, Agile, Ninject, LINQ, Postsharp, NUnit.</li>
-                                <li>Optym have applied optimization & AI algorithms to some of the largest transportation companies including top railroads and airlines.</li>
                             </ul>
                         </div>
                     </div>
-
+                    <br />
                     <div class="item group">
                         <h2 class="item-title">Infosys</h2>
                         <div class="item">
@@ -238,16 +239,16 @@
                                 <span class="job-title"><i class="fas fa-map-marker-alt"></i> Chandigarh, India</span>
                             </div>
                             <ul>
-                                <li>Enhanced Report Generation module for BASEL-3 and bug fixes.</li>
-                                <li>Worked on Data Warehousing project in which report generation is done after a complex
-                                    ETL process.</li>
-                                <li>Feature development, enhancements and maintenance for multiple projects (client:
-                                    American Express): Modified Lockbox Management (MLB), Split funding (SF), Speed of
-                                    Pay
-                                    Project (SOP), Three Amex applications i.e. Project uplift, NIT 2.0, ACH Gateway,
-                                    BOP</li>
                                 <li><b>Tech-stack:</b> Mainframe, COBOL, MS-SQL, Linux, Perl, HTML, CSS, Js</li>
-                                <li>Infosys (NYSE: INFY) is a well-known MNC known for it's IT Solutions and Services, Consulting, Business Process Outsourcing, Products and Platforms, Engineering Services.</li>
+                                <li>Implemented requirements in the Report Generation module for BASEL-3 regulatory
+                                    standards and refactored the code base.</li>
+                                <li>Developed snowflake DB schema and ETL data-pipeline for a Data Warehousing project.
+                                </li>
+                                <li>Did feature development, maintenance, and documentation for multiple Amex projects:
+                                    Modified Lockbox Management (MLB), Split funding (SF), Speed of
+                                    Pay Project (SOP), three Amex applications i.e. Project uplift, NIT 2.0, ACH
+                                    Gateway,
+                                    BOP</li>
                             </ul>
                         </div>
                     </div>
@@ -317,7 +318,8 @@
                         </h2>
                     </div>
                     <div class="item">
-                        <h2 class="item-title">Work Authorisation: <span> - will require visa sponsorship for International roles.</span>
+                        <h2 class="item-title">Work Authorisation: <span> - will require visa sponsorship for
+                                International roles.</span>
                         </h2>
                         <!-- <li>IELTS: 8 bands</li>
                         <li>TOEFL: 109 - 2021</li> -->
